Dato virker - lavet converter, sat datetime now i constructor.

--- a/Vaccine App/View/MainPage.xaml
+++ b/Vaccine App/View/MainPage.xaml
@@ -12,6 +12,8 @@
     <Page.Resources>
         <converters:TextConverter x:Name="IntToString"/>
         <converters:ComboBoxItemConvert x:Name="CbiToString"/>
+        <converters:DateTimeOffsetToDateTimeConverter x:Name="DtToDtOffset"/>
+
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -26,7 +28,7 @@
         <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="37" Margin="10,383,0,0" TextWrapping="Wrap" Text="{Binding DeviceId, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Device ID"/>
         <!--<TextBox x:Name="textBox3" HorizontalAlignment="Left" Height="0" Margin="10,421,0,0" TextWrapping="Wrap" Text="{Binding Gender, Mode=TwoWay}" VerticalAlignment="Top" Width="124" PlaceholderText="Gender"/>-->
         <Button x:Name="button2" Content="Forside" HorizontalAlignment="Left" Margin="179,561,0,0" VerticalAlignment="Top" Click="button2_Click"/>
-        <DatePicker HorizontalAlignment="Left" Margin="16,314,0,0" VerticalAlignment="Top" Date="{Binding Fødselsdato, Mode=TwoWay}"/>
+        <DatePicker HorizontalAlignment="Left" Margin="16,314,0,0" VerticalAlignment="Top" Date="{Binding Fødselsdato, Mode=TwoWay, Converter={StaticResource DtToDtOffset}}" />
         <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Margin="147,362,0,0" VerticalAlignment="Top" Width="120">
             <ComboBox 
                 x:Name="comboBox"
