--- a/Vaccine App/View/Kalender.xaml
+++ b/Vaccine App/View/Kalender.xaml
@@ -69,7 +69,7 @@
                     <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="#FF6BAFCD">
                         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,5,0,0" TextWrapping="Wrap" Text="Kalender" VerticalAlignment="Top" Height="35" Width="160" FontSize="25"/>
                     </Grid>
-                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="428" Margin="30,31,0,0" VerticalAlignment="Top" Width="299" BorderBrush="#7F256FB4" Background="#FF9CC6ED" BorderThickness="2" Grid.Row="1" ItemsSource="{Binding VaccineCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedVaccine, Mode=TwoWay}"/>
+                    <ListView x:Name="listView" HorizontalAlignment="Left" Height="428" Margin="30,31,0,0" VerticalAlignment="Top" Width="299" BorderBrush="#7F256FB4" Background="#FF9CC6ED" BorderThickness="2" Grid.Row="1" ItemsSource="{Binding VaccineViewCollection, Mode=TwoWay}" SelectedItem="{Binding SelectedVaccine, Mode=TwoWay}"/>
                     <Button x:Name="button1" Content="Taget" HorizontalAlignment="Left" Margin="30,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#FF9CC6ED" FontSize="40" Grid.Row="1"/>
                     <Button x:Name="button2" Content="Afvis" HorizontalAlignment="Left" Margin="196,490,0,0" VerticalAlignment="Top" Height="66" Width="133" Background="#FF9CC6ED" FontSize="40" Grid.Row="1"/>
                 </Grid>
