--- a/Vaccine App/View/VaccinationsInfo.xaml
+++ b/Vaccine App/View/VaccinationsInfo.xaml
@@ -44,11 +44,10 @@
                         Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_2"/>
                         <!--<TextBlock Text="Påmindelser" FontSize="18" VerticalAlignment="Center" />-->
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal">
+                    <!--<StackPanel Orientation="Horizontal">
                         <Button x:Name="MenuButton3" FontFamily="Arial" Content="Kalender"
                         Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_3"/>
-                        <!--<TextBlock Text="Kalender" FontSize="18" VerticalAlignment="Center" />-->
-                    </StackPanel>
+                    </StackPanel>-->
                     <StackPanel Orientation="Horizontal">
                         <Button x:Name="MenuButton4" FontFamily="Arial" Content="Historik"
                         Width="150" Height="50" Background="Transparent" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Click="Buttom_Click_4"/>
