--- a/Vaccine App/View/Forside.xaml
+++ b/Vaccine App/View/Forside.xaml
@@ -1,10 +1,11 @@
 ﻿<Page
-    x:Class="Vaccine_App.View.Forside"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Vaccine_App.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ViewModel="using:Vaccine_App.ViewModel"
+    x:Class="Vaccine_App.View.Forside"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -54,28 +55,29 @@
                     </StackPanel>
                 </StackPanel>
             </SplitView.Pane>
-            <SplitView.Content>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="#FF6BAFCD">
-                        <!--<TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Påmindelser" VerticalAlignment="Top" Height="30" Width="160" FontSize="25"/>-->
-                    </Grid>
-                    <Image x:Name="image" HorizontalAlignment="Left" Height="178" Margin="10,97,0,0" VerticalAlignment="Top" Width="340" Visibility="Visible" Source="ms-appx:///Assets/stort_logo.png" Grid.Row="1">
-                        
-                    </Image>
-                    <Button x:Name="button" 
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid HorizontalAlignment="Left" Height="50" Margin="50,0,0,0" VerticalAlignment="Top" Width="974" Background="#FF6BAFCD">
+                    <!--<TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Påmindelser" VerticalAlignment="Top" Height="30" Width="160" FontSize="25"/>-->
+                </Grid>
+                <Image x:Name="image" HorizontalAlignment="Left" Height="178" Margin="10,60,0,0" VerticalAlignment="Top" Width="340" Visibility="Visible" Source="ms-appx:///Assets/stort_logo.png" Grid.Row="1"/>
+                <Button x:Name="button" 
                         Content="+ Opret Barn" 
                         HorizontalAlignment="Left" 
-                        Margin="90,421,0,0" 
+                        Margin="90,465,0,0" 
                         VerticalAlignment="Top" Height="61" 
                         Width="180" Grid.Row="1" FontSize="25"
                         Click="Buttom_Click_5" Background="#FF9CC6ED"/>
-                    <Button x:Name="button1" Content="Alarm" HorizontalAlignment="Left" Margin="257,35,0,0" Grid.Row="1" VerticalAlignment="Top" Click="button1_Click"/>
-                </Grid>
-            </SplitView.Content>
+                <Button x:Name="button1" Content="Alarm" HorizontalAlignment="Left" Margin="257,20,0,0" Grid.Row="1" VerticalAlignment="Top" Click="button1_Click"/>
+                <ListView x:Name="listView" HorizontalAlignment="Left" Height="150" Margin="50,270,0,0" Grid.Row="1" VerticalAlignment="Top" Width="250" ItemsSource="{Binding BarnCollection, Mode=TwoWay}">
+                    <ListView.DataContext>
+                        <ViewModel:BrugerViewmodel/>
+                    </ListView.DataContext>
+                </ListView>
+            </Grid>
         </SplitView>
     </Grid>
 </Page>
