--- a/Vaccine App/View/Forside.xaml
+++ b/Vaccine App/View/Forside.xaml
@@ -72,7 +72,7 @@
                         Width="180" Grid.Row="1" FontSize="25"
                         Click="Buttom_Click_5" Background="#FF9CC6ED"/>
                 <Button x:Name="button1" Content="Alarm" HorizontalAlignment="Left" Margin="257,20,0,0" Grid.Row="1" VerticalAlignment="Top" Click="button1_Click"/>
-                <ListView x:Name="listView" HorizontalAlignment="Left" Height="150" Margin="50,290,0,0" Grid.Row="1" VerticalAlignment="Top" Width="250" ItemsSource="{Binding BarnCollection, Mode=TwoWay}">
+                <ListView x:Name="listView" HorizontalAlignment="Left" Height="150" Margin="50,290,0,0" Grid.Row="1" VerticalAlignment="Top" Width="250" ItemsSource="{Binding BarnCollection, Mode=TwoWay}" IsEnabled="False">
                     <ListView.DataContext>
                         <ViewModel:BrugerViewmodel/>
                     </ListView.DataContext>
